# de-mls-poc

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
apps/de_mls_desktop_ui/: Cargo.toml
apps/de_mls_desktop_ui/src/: main.rs
crates/de_mls_ds/: Cargo.toml
crates/de_mls_gateway/: Cargo.toml  build.rs
crates/de_mls_gateway/src/: forwarder.rs  group.rs  handler.rs  lib.rs  mls.rs
crates/de_mls_gateway/src/user/: error.rs  inbound.rs  lifecycle.rs  liveness.rs  mod.rs  plugins.rs  state.rs
crates/de_mls_gateway/tests/: app_message_roundtrip.rs
crates/de_mls_gateway/tests/common/: conversation_fixtures.rs  wallet.rs
crates/de_mls_ui_protocol/: Cargo.toml
crates/de_mls_ui_protocol/src/: lib.rs
crates/ui_bridge/: Cargo.toml
crates/ui_bridge/src/: lib.rs
