[workspace]
resolver = "3"
members = [
    "apps/de_mls_desktop_ui",
    "crates/de_mls_ds",
    "crates/de_mls_gateway",
    "crates/de_mls_ui_protocol",
    "crates/ui_bridge",
]

[workspace.dependencies]
de-mls = { git = "https://github.com/vacp2p/de-mls.git", branch = "main" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
