[package]
name = "de-mls-desktop-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
de-mls-ui-protocol = { path = "../../crates/de_mls_ui_protocol" }
de-mls-gateway = { path = "../../crates/de_mls_gateway" }
ui-bridge = { path = "../../crates/ui_bridge" }
de-mls = { workspace = true }

dioxus = { version = "0.6.3", features = ["signals", "router", "desktop"] }
dioxus-desktop = "0.6.3"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
futures = "0.3.32"
anyhow = "1.0.102"
thiserror = "2.0.18"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
once_cell = "1.21.4"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.5"
hashgraph-like-consensus = "0.6.0"
prost = "0.14"
alloy = { version = "2.0.5", default-features = false, features = [
    "signer-local",
] }
