[package]
name = "de-mls-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
anyhow = "1.0.102"
futures = "0.3.32"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
once_cell = "1.21.4"
parking_lot = "0.12.5"
async-trait = "0.1.89"
tracing = "0.1.44"
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2.0"
prost = "0.14"

hashgraph-like-consensus = "0.6.0"
alloy = { version = "2.0.5", default-features = false, features = [
    "signer-local",
] }

openmls = "0.8.1"
openmls_traits = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = { version = "0.5.0", features = ["clonable"] }

de-mls-ui-protocol = { path = "../de_mls_ui_protocol" }
de-mls = { workspace = true }
de-mls-ds = { path = "../de_mls_ds", features = ["waku"] }

