[package]
name = "de-mls-ui-protocol"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
thiserror = "2.0.18"
hashgraph-like-consensus = "0.6.0"
de-mls = { workspace = true }
