[package]
name = "ui-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
anyhow = "1.0.102"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
tracing = "0.1.44"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

de-mls-gateway = { path = "../de_mls_gateway" }
de-mls-ui-protocol = { path = "../de_mls_ui_protocol" }
de-mls = { workspace = true }
de-mls-ds = { path = "../de_mls_ds", features = ["waku"] }
